--- a/index.html
+++ b/index.html
@@ -1,11 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <title>My Personal Website</title>
-    <link rel="stylesheet" href="css/style.css"/>
+    <link rel="stylesheet" href="css/style.css" />
 </head>
+
 <body>
-   <h1>Hello World</h1> 
-   <script src="script.js"></script>
+    <div class="section-one">
+        <h1><strong>FELICIA KWAME</strong></h1>
+        <h2>|Software Developer|</h2>
+        <div class="img-wrapper">
+            <img src="/WhatsApp Image 2024-06-23 at 2.10.20 PM(3).jpeg" />
+        </div>
+    </div>
+
+    <div class="section-two">
+        <h1> Who is Felica Kwame?</h1>
+        <p>Felicia Kwame is a driven and ambitious 19 year old with a passion for technology and innovation.Her dream is
+            to become a skilled software and mobile developer,
+            a goal she has been diligently working towards since her early teens.Felicia's journey began with
+            self-taught coding lessons,which quickly evolved into more structured
+            learning through coding schools such as Moringa School.Her dedication is evident in the hours she spends
+            honing her programming skills.Felicia is particularly
+            inspired by the potential of mobile technology to create meaningful change and she envisions a future where
+            she can design and develop applications that
+            improve her everyday life.
+        </p>
+        <div class="img-wrapper">
+            <img src="/WhatsApp Image 2024-06-23 at 2.07.38 PM(1).jpeg" />
+        </div>
+    </div>
+
+    <div class="section-three">
+        <h1>What does Felicia bring to the table besides her tech skills?</h1>
+        <p>Well apart from her skills and passion for software and mobile development.Felicia is a vibrant and
+            multifaceted individual.She has a knack for creative
+            expression ,often chanelling her imagination through digital art.Her friends also admire her adventrous
+            spirit,which leads her to explore new places and culture
+            whenever she gets the chance to do so.Felicia is also a good content creator due to her much engagment with
+            social media and its trends.She is also a political
+            and human rights activist due to her huge compassion of social justice and equality,a born leader you can
+            say!.
+        </p>
+
+        <div class="img-wrapper">
+            <img src="/WhatsApp Image 2024-06-23 at 2.10.20 PM(5).jpeg" />
+        </div>
+    </div>
+
+    <footer>
+        <p><strong>Contact Me</strong></p>
+        <p>Telephone:+254110534533</p>
+        <p>Gmail:kwamefelicia2005@gmail.com</p>
+    </footer>
 </body>
+
 </html>
